# scriptx

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  make-deb
.github/workflows/: cross-compiling.yml  devskim.yml  make-deb.yml
deb/: control
man/: scriptx.1.man
src/: ff.rs  main.rs
src/ffwrappers/: errors.rs  mod.rs  mpeg.rs  probe.rs
