[package]
name = "scriptx"
version = "0.1.1"
authors = ["Joel Montes de Oca"]
homepage = "https://joelmon.github.io/scriptx/"
edition = "2018"
description = "ScriptX is a command line tool to cut verses out of the American Sign Language version of the New World Translation."
repository = "https://github.com/JoelMon/scriptx"
readme = "README.md"
license = "GPL-3.0-only"
license-file = "LICENSE.md"
keywords = ["cli", "nwt", "bible", "ffmpeg", "jehovah-witness"]
categories = ["command-line-utilities"]
[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
