[package]
name = "scriptx"
version = "0.2.3"
authors = ["Joel Montes de Oca"]
homepage = "https://joelmon.github.io/scriptx/"
documentation = "https://docs.rs/scriptx"
edition = "2018"
description = "ScriptX is a command line tool to cut scriptures out of the American Sign Language version of the New World Translation."
repository = "https://github.com/JoelMon/scriptx"
readme = "README.md"
license = "MIT"
keywords = ["cli", "nwt", "bible", "ffmpeg", "jehovah-witness"]
categories = ["command-line-utilities"]
[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ff"
path = "src/ff.rs"

[dependencies]
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
